@@ -8,6 +8,7 @@ ispCP ω 1.0.0 Changelog
 		* Add support for alias subdomain mail (part III)
 		* Add support for alias subdomain mail (part IV)
 		* Alias subdomains are not counted
+		* Hide alias domain list when no alias exists
 	- ENGINE
 		* Fixed #1518: Virtual mail problem
 		* Alias subdomain are not deleted when alais is deleted in same operation
